--- a/package.json
+++ b/package.json
@@ -2,33 +2,59 @@
   "name": "powerbi-report-app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
-  },
+  "description": "It's a minimalistic react component to embed a Microsoft PowerBI report or dashboard into your react application.",
+  "main": "lib/index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "concurrently \"npm run lib:watch\" \"npm run docs\"",
+    "lib": "babel src/lib -d lib --copy-files",
+    "lib:watch": "babel src/lib -w -d lib --copy-files",
+    "docs": "webpack-dev-server --mode development",
+    "docs:prod": "webpack --mode production",
+    "publish:demo": "npm run docs:prod && gh-pages -d docs"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "keywords": [
+    "powerbi",
+    "react-powerbi",
+    "react",
+    "bi",
+    "embed",
+    "report",
+    "dashboard"
+  ],
+  "license": "MIT",
+  "peerDependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4",
+    "ajv": "^6.10.2",
+    "all-contributors-cli": "^6.11.2",
+    "babel-loader": "^8.0.6",
+    "concurrently": "^3.6.1",
+    "css-loader": "^3.3.0",
+    "gh-pages": "^1.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "react": "^16.12.0",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-dom": "^16.12.0",
+    "react-dropdown": "^1.6.4",
+    "react-splitter-layout": "^4.0.0",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
+  },
+  "author": {
+    "name": "Pranik Garg",
+    "email": "pragarg1@publicisgroupe.net"
+  },
+  "dependencies": {
+    "powerbi-client": "^2.10.3",
+    "prop-types": "^15.7.2"
   }
 }
