--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   },
+  "homepage": "http://pranikgarg.github.io/powerbi-report-app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pranikgarg/powerbi-report-app"
+  },
   "author": {
     "name": "Pranik Garg",
     "email": "pragarg1@publicisgroupe.net"
